--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
     </modules>
     <properties>
         <vertx.vertsion>3.4.2</vertx.vertsion>
-        <main.class>io.vertx.core.Launcher</main.class>
-        <main.verticle>org.vertx.exstension.verticle.LancherVerticle</main.verticle>
+        <rxjava.vertsion>1.3.4</rxjava.vertsion>
+        <main.class>org.vertx.exstension.ApplicationMain</main.class>
     </properties>
     <dependencies>
         <dependency>
@@ -27,6 +27,12 @@
             <artifactId>vertx-web</artifactId>
             <version>${vertx.vertsion}</version>
         </dependency>
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>${rxjava.vertsion}</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -54,7 +60,6 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>${main.class}</Main-Class>
-                                        <Main-Verticle>${main.verticle}</Main-Verticle>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
