--- a/launcher/src/main/resources/core.properties
+++ b/launcher/src/main/resources/core.properties
@@ -1,3 +1,3 @@
 #the core configurator
-curr.log.factory=io.vertx.core.logging.SLF4JLogDelegateFactory
+curr.logging.factory=io.vertx.core.logging.SLF4JLogDelegateFactory
 curr.properties=local.properties
