--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lancher</artifactId>
+    <artifactId>launcher</artifactId>
 
     <dependencies>
 
