--- a/launcher/src/main/resources/config.properties
+++ b/launcher/src/main/resources/config.properties
@@ -1,3 +1,3 @@
-#the core configurator
+#the local dubug environment configrutor
 curr.logging.factory=io.vertx.core.logging.SLF4JLogDelegateFactory
-curr.properties=local.properties
+web.listen.port=8080
