--- a/launcher/src/main/resources/config.properties
+++ b/launcher/src/main/resources/config.properties
@@ -1,3 +1,4 @@
 #the local dubug environment configrutor
 curr.logging.factory=io.vertx.core.logging.SLF4JLogDelegateFactory
 web.listen.port=8080
+web.route.package=org.vertx.exstension.route
