--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -10,8 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.vertx.exstension</groupId>
     <artifactId>launcher</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <version>1.1.0-SNAPSHOT</version>
     <properties>
         <vertx.vertsion>3.4.2</vertx.vertsion>
     </properties>
@@ -43,6 +43,21 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase><!--指定绑定的声明周期阶段-->
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
