--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>launcher</module>
+        <module>weblauncher</module>
     </modules>
     <properties>
         <vertx.vertsion>3.4.2</vertx.vertsion>
