--- a/weblauncher/pom.xml
+++ b/weblauncher/pom.xml
@@ -5,23 +5,21 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.vertx.exstension</groupId>
-    <artifactId>launcher</artifactId>
-    <packaging>jar</packaging>
-    <version>1.1.0-SNAPSHOT</version>
+    <artifactId>web-launcher</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
-        </dependency>
-        <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-core</artifactId>
+            <artifactId>vertx-web</artifactId>
             <version>3.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.vertx.exstension</groupId>
+            <artifactId>launcher</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
