--- a/base/pom.xml
+++ b/base/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.vertx.exstension</groupId>
-    <artifactId>launcher</artifactId>
+    <artifactId>base</artifactId>
     <packaging>jar</packaging>
     <version>1.1.0-SNAPSHOT</version>
 
