启动器启动流程简化

--- a/web-launcher/pom.xml
+++ b/web-launcher/pom.xml
@@ -16,7 +16,7 @@
         </dependency>
         <dependency>
             <groupId>org.vertx.exstension</groupId>
-            <artifactId>launcher</artifactId>
+            <artifactId>base</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
