--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>launcher</module>
-        <module>weblauncher</module>
+        <module>base</module>
+        <module>web-launcher</module>
     </modules>
     <properties>
         <vertx.vertsion>3.4.2</vertx.vertsion>
